--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>GoTrack GPS</title>
+  <title>Giam sat xe VCN</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport"
@@ -50,7 +50,7 @@
         }
       },
       basePath: location.port === '3000' ? '/' : '/', //'/gotrack-um/',
-      repo: 'gotrack-gps/gotrack-um',
+      repo: 'gotrack-gps/vcn-um',
       ga: '',
       search: {
         depth: 3,
