--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div id="app">Please wait ...</div>
   <script>
     window.$docsify = {
-      name: 'GoTrack GPS',
+      name: 'Giam sat xe VCN',
       search: 'auto',
       themeColor: '#f6931c',
       // coverpage: 'docs/_coverpage.md',
@@ -49,7 +49,7 @@
           }
         }
       },
-      basePath: location.port === '3000' ? '/' : '/', //'/gotrack-um/',
+      basePath: location.port === '8000' ? '/' : '/', //'/vcn-um/',
       repo: 'gotrack-gps/vcn-um',
       ga: '',
       search: {
