--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div id="app">Please wait ...</div>
   <script>
     window.$docsify = {
-      name: 'Giam sat xe VCN',
+      name: 'VIỆT CONNECT',
       search: 'auto',
       themeColor: '#f6931c',
       // coverpage: 'docs/_coverpage.md',
