--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
       subMaxLevel: 4,
       nameLink: {
         '/vi/': '#/vi/',
-        '/': '#/vi/'
+        '/': '#/'
       },
       alias: {
         '/.*/_navbar.md': 'docs/_navbar.md',
         // sidebar
         '/vi/.*/_sidebar.md': 'docs/_sidebar_vi.md',
-        '/modules/.*/_sidebar.md': 'docs/_sidebar_vi.md',
+        '/modules/.*/_sidebar.md': 'docs/_sidebar.md',
         '/vi/': 'README_vi.md',
         '/vi/modules/(.*)/': 'modules/$1/README_vi.md',
         '/vi/CHANGELOG': 'CHANGELOG_vi.md',
