--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         }
       },
       basePath: location.port === '8000' ? '/' : '/', //'/vcn-um/',
-      repo: 'gotrack-gps/vcn-um',
+      // repo: 'gotrack-gps/vcn-um',
       ga: '',
       search: {
         depth: 3,
